--- a/a.html
+++ b/a.html
@@ -1,7 +1,2 @@
-<html><body><center><form method="POST" action="https://fmcweek-liart.vercel.app/download/pa">
-    <label for="user">User</label><br>
-    <input type="text" id="user" name="user"><br>
-    <label for="pass">Pass</label><br>
-    <input type="text" id="pass" name="pass">
-    <input type="submit">
-</form></center></body></html>
+<html><body><center><h2>Thank You for your participation in FMC Weekend! <br> Contact us for any queries. Redirecting you to the Home Page!!</h2></center><script type="text/javascript">setTimeout(function() {window.location = "https://fmcweekend.in/#/dash";}, 7000)</script></body></html>
+            <!-- res.writeHead(200,{'Content-Type' : 'text/html'}); -->
